# kelly_telegram

./: .coverage  .gitignore  README.md  pyproject.toml
bot/: __init__.py  main.py
bot/core/: __init__.py  config.py
bot/handlers/: __init__.py  commands.py  messages.py
bot/services/: __init__.py  api_client.py
kelly_telegram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/handlers/: test_messages.py
